css/style.css
* { box-sizing: border-box; }

body {
	font-family: 'Roboto', sans-serif;
	font-size: 16px;
	line-height: 1.6;
}
.home-wrapper {
	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/background.jpg') no-repeat center top;
	background-size: cover;
	color: white;
}

header {
	position: fixed;
	padding: 10px 0;
	width: 100%;
	background-color: rgba(48, 48, 48, 0.5);
}

header img {
	width: 200px;
}

header nav {
	float: right;
	margin-top: 10px;
}

header nav a {
	color: white;
	font-weight: bold;
	text-decoration: none;
	margin-left: 10px;
	padding: 10px 15px;
}

header nav a.active {
	background: #fed136;
	border-radius: 3px;
}

#home {
	text-align: center;
	padding: 200px 0 150px;
}

#home h1 {
	font-size: 68px;
	font-weight: normal;
	line-height: 1.2;
	margin-bottom: 40px;
}

#home .divider {
	width: 80px;
	border-top: 5px solid #fed136;
	margin: 0 auto;
}

#home p {
	font-size: 24px;
	margin-top: 40px;
}

#home .social {
	margin-top: 80px;
}

#home .social a {
	color: white;
	display: inline-block;
	border-radius: 50%;
	background-color: black;
	font-size: 24px;
	font-weight: bold;
	height:50px;
	width: 50px;
	line-height: 50px;
	margin-right: 10px;
	-webkit-transition: all .3s;
	-moz-transition: all .3s;
	transition: all .3s;
}

#home .social a:hover {
	background-color: #fed136;
}

#servicios .box {
	display: inline-block;
	text-align: center;
	width: 33%;
	padding: 10px;
}

#video {
	background-color: black;
	text-align: center;
	padding: 30px 0;
}

#portafolio {
	background-color: whitesmoke;
}

#portafolio .box {
	display: inline-block;
	text-align: center;
	width: 31%;
	margin: 1%;
	background-color: white;

}

#portafolio .box img {
	width: 100%;
}

#portafolio .box p {
	color: #666;
	padding: 10px;
}

#contacto {
	background-color: #303030;
	background-image: url('../images/map-image.png');
	background-position: center;
	background-repeat: no-repeat;
	text-align: center;
}

#contacto h2 {
	color: white;
}

#contacto input {
	padding: 20px;
	width: 400px;
	border: 1px solid #ccc;
	border-radius: 3px;
}

#contacto textarea {
	margin: 20px 0;
	padding: 20px;
	width: 400px;
}

#contacto button {
	background-color: #fed136;
	padding: 20px 40px;
	border-color: #fed136;
	border-radius: 3px;
	color: white;
	font-size: 18px;
	line-height: 1;
	font-weight: bold;
}

footer {
	padding: 90px 0;
	text-align: center;
	font-size: 18px;
}

section {
	padding: 80px 0;
}

section h2 {
	font-size: 32px;
	margin-left: auto;
	margin-right: auto;
}

.container {
	width: 992px;
	margin-left: auto;
	margin-right: auto;
}

